<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_mis_ubicaciones"
            android:icon="@drawable/ic_sol"
            android:title="@string/mis_ubicaciones" />
        <item
            android:id="@+id/nav_agregar_ubicacion"
            android:icon="@drawable/ic_ubicacion"
            android:title="@string/agregar_ubicacion" />
    </group>
    <group
        android:id="@+id/group_2">
        <item
            android:id="@+id/nav_ayuda"
            android:icon="@drawable/ic_ayuda"
            android:title="Ayuda y sugerencias" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_configuracion"
            android:title="Configuración" />
    </group>
</menu>